welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: Missing closing brace `}' assumed here
while (estSurMessage()) {
^BDRBuggle:9: error: Missing closing brace `}' assumed here
} else if (litMessage() == "I") {
^